# cpp-template

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md
casting/: CMakeLists.txt  const_cast.cpp  dynamic_cast.cpp  reinterpret_case.cpp  static_cast.cpp
class_template/: A.h  B.h  CMakeLists.txt  Interface.h  Linking.h  main.cpp
enum_class/: CMakeLists.txt  ex1.cpp
extern_C/: CMakeLists.txt  README.md  main.c  main.cpp  test1.h  test2.h
impl/: CMakeLists.txt  Colbot.cpp  Colbot.h  PacketHandler.cpp  PacketHandler.h  RobotHandler.h  Serial.cpp  Serial.h  main.cpp
inl/: CMakeLists.txt  main.cpp
operator_overloading/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp
pretty_cout/: CMakeLists.txt  ex3.cpp
smart_pointer/shared_ptr/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp
string_and_string_view/: CMakeLists.txt  low_level_convert.cpp  raw_string_literal.cpp  std_string.cpp
thread/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp
thread_syncronization/: CMakeLists.txt
thread_syncronization/atomic/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp
thread_syncronization/mutex/: CMakeLists.txt  ex0.cpp  ex1.cpp  ex2.cpp
uniform_initialization/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp
utilities/: CMakeLists.txt
utilities/core/: CMakeLists.txt
utilities/core/csl/core/: Core.cpp  Core.h
utilities/core/csl/hardware/: KeyEvent.cpp  KeyEvent.h
utilities/core/csl/hardware/keyboard/: KeyboardHandler.cpp  KeyboardHandler.h
utilities/core/csl/hardware/keyboard/apple/: Keyboard.cpp  Keyboard.h
utilities/core/csl/time/: Tick.h
utilities/core/test/: CMakeLists.txt  core_test.cc
utilities/logger/: CMakeLists.txt  Logger.cpp  Logger.h  main.cpp
utilities/printer/: CMakeLists.txt  Printer.cpp  Printer.h  ex1.cpp  ex2.cpp  ex3.cpp
utilities/printer/cmake/: cslPrinterConfig.cmake  cslPrinterConfigVersion.cmake
utilities/printer/csl/printer/src/: Printer.cpp
